--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -16,7 +16,7 @@
                   <div class="card mb-4">
                     <div class="card-body">
                       <form
-                        action="/adminLogin/newProduct"
+                        action="/admin/newProduct"
                         method="post"
                         enctype="multipart/form-data"
                       >
