--- a/views/admin/categoryForm.ejs
+++ b/views/admin/categoryForm.ejs
@@ -70,7 +70,7 @@
     <div class="card-body">
       
       <form
-        action="/adminLogin/subCategoryAdd/"
+        action="/admin/subCategoryAdd/"
         method="post"
         enctype="multipart/form-data"
         
