--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -70,7 +70,7 @@
     <div class="card-body">
       
       <form
-        action="/adminLogin/coupon"
+        action="/admin/coupon"
         method="post"
         
         
