--- a/views/admin/mainCategory.ejs
+++ b/views/admin/mainCategory.ejs
@@ -69,7 +69,7 @@
   <div class="card mb-5 m-auto mt-5" style="height: 350px; width: 700px">
     <div class="card-body">
       <form
-        action="/adminLogin/categoryAdd"
+        action="/admin/categoryAdd"
         method="post"
         enctype="multipart/form-data"
       >
