--- a/views/adminHeader.ejs
+++ b/views/adminHeader.ejs
@@ -150,7 +150,7 @@
           <ul class="menu-inner py-1">
             <!-- Dashboard -->
             <li class="menu-item ">
-              <a href="/adminLogin/adminHome" class="menu-link">
+              <a href="/admin/adminHome" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
                 <div data-i18n="Analytics">Dashboard</div>
               </a>
@@ -165,17 +165,17 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/addProduct" class="menu-link">
+                  <a href="/admin/addProduct" class="menu-link">
                     <div data-i18n="Without menu">Add Products</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/adminLogin/showProducts" class="menu-link">
+                  <a href="/admin/showProducts" class="menu-link">
                     <div data-i18n="Without navbar">Show Products</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/adminLogin/category" class="menu-link">
+                  <a href="/admin/category" class="menu-link">
                     <div data-i18n="Container">Category</div>
                   </a>
                 </li>
@@ -193,7 +193,7 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/showUser" class="menu-link">
+                  <a href="/admin/showUser" class="menu-link">
                     <div data-i18n="Without menu">Show Users</div>
                   </a>
                 </li>
@@ -209,8 +209,13 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/coupon" class="menu-link">
+                  <a href="/admin/coupon" class="menu-link">
                     <div data-i18n="Without menu">Add Coupon</div>
+                  </a>
+                </li>
+                <li class="menu-item">
+                  <a href="/admin/showCoupon" class="menu-link">
+                    <div data-i18n="Without menu">Show Coupons</div>
                   </a>
                 </li>
                 
@@ -225,12 +230,12 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/banner" class="menu-link">
+                  <a href="/admin/banner" class="menu-link">
                     <div data-i18n="Without menu">Add Banner</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/adminLogin/showBanner" class="menu-link">
+                  <a href="/admin/showBanner" class="menu-link">
                     <div data-i18n="Without menu">Show Banner</div>
                   </a>
                 </li>
@@ -248,7 +253,7 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/orders" class="menu-link">
+                  <a href="/admin/orders" class="menu-link">
                     <div data-i18n="Account">Orders</div>
                   </a>
                 </li>
@@ -361,7 +366,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="/adminLogin">
+                      <a class="dropdown-item" href="/admin">
                         <i class="bx bx-power-off me-2"></i>
                         <span class="align-middle">Log Out</span>
                       </a>
