--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -17,7 +17,7 @@
     <body>
 		<div class="container" id="container">
 				<div class="form-container  sign-up-container">
-				<form action="/login/signup/otp" method="post" enctype="multipart/form-data">
+				<form action="/signup/otp" method="post" enctype="multipart/form-data">
 					<div class="header">Sign Up</div>
 					<div class="social__media__container">
 						<a href="https://codepen.io/Rittenhouse" target="_blank" class="social codepen">
@@ -62,7 +62,7 @@
 			
 			
 			<div class="form-container  sign-in-container">
-				<form action="/login/user" method="post" enctype="multipart/form-data">
+				<form action="/user" method="post" enctype="multipart/form-data">
 					<div class="header">Sign In</div>
 					<div class="social__media__container">
 						<a href="https://codepen.io/Rittenhouse" target="_blank"  class="social codepen">
