--- a/views/user/manageAddress.ejs
+++ b/views/user/manageAddress.ejs
@@ -12,7 +12,7 @@
         style="margin-left: 600px;"
       class="btn btn-success"
      
-      href="/login/addAddressPage"
+      href="/addAddressPage"
       >Add address</a
     >
         <div class="main-body mt-1" >
@@ -78,7 +78,7 @@
                  
                   <div class="row" style="margin-left: 325px;">
                     <div class="col-sm-12" >
-                      <a class="btn btn-danger"  href="/login/deleteAddress/<%= x._id %>">Delete</a>
+                      <a class="btn btn-danger"  href="/deleteAddress/<%= x._id %>">Delete</a>
                       
                     </div>
                   </div>
