--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -23,7 +23,7 @@
       </div>
       <div class="contact">
         
-        <form method="POST" action="/login/varifyOtp">
+        <form method="POST" action="/varifyOtp">
           <p>
             <label>Enter otp</label>
             <input type="text" name="otp" required>
@@ -35,7 +35,7 @@
 
         </form>
         <br>
-        <form method="POST" action="/login/resendOtp">
+        <form method="POST" action="/resendOtp">
           <p class="full">
             <button type="submit">resend otp</button>
           </p>
