--- a/views/userHeader.ejs
+++ b/views/userHeader.ejs
@@ -3,6 +3,9 @@
     <head>
         <title>Minishop - Free Bootstrap 4 Template by Colorlib</title>
         <meta charset="utf-8" />
+
+       
+
         <meta
           name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -75,6 +78,8 @@
 
 
         <!-- shop page  -->
+
+        
         
 
       </head>
@@ -87,7 +92,7 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="/login/userHome">Insoles</a>
+        <a class="navbar-brand" href="/">Insoles</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -103,7 +108,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/login/userHome" class="nav-link">Home</a>
+              <a href="/" class="nav-link">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -116,7 +121,7 @@
                 >Catalog</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="shop.html">Shop</a>
+                <a class="dropdown-item" href="/shop">Shop</a>
                 <a class="dropdown-item" href="product-single.html"
                   >Single Product</a
                 >
@@ -142,16 +147,16 @@
                 >Account</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="/login/profile">PROFILE</a>
-                <a class="dropdown-item" href="/login/logout">LOGOUT</a>
+                <a class="dropdown-item" href="/profile">PROFILE</a>
+                <a class="dropdown-item" href="/logout">LOGOUT</a>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="/login/wishlist" class="nav-link">Wishlist</a>
+              <a href="/wishlist" class="nav-link">Wishlist</a>
             </li>
             <li class="nav-item cta cta-colored">
-              <a href="/login/cart" class="nav-link"
+              <a href="/cart" class="nav-link"
                 ><span class="icon-shopping_cart"></span>[0]</a
               >
             </li>
