--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -70,7 +70,7 @@
     <div class="card-body">
       
       <form
-        action="/adminLogin/banner"
+        action="/admin/banner"
         method="post"
         enctype="multipart/form-data"
         
