--- a/views/admin/editBanner.ejs
+++ b/views/admin/editBanner.ejs
@@ -70,7 +70,7 @@
     <div class="card-body">
       
       <form
-        action="/adminLogin/updateBanner/<%= banner._id %> "
+        action="/admin/updateBanner/<%= banner._id %> "
         method="post"
         enctype="multipart/form-data"
         
