--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -70,12 +70,12 @@
     <div class="card-body">
 
       
-        <form action="/adminLogin/deleteCategory/<%= singleCategory._id %>" method="post" enctype="multipart/form-data"> 
+        <form action="/admin/deleteCategory/<%= singleCategory._id %>" method="post" enctype="multipart/form-data"> 
        <button type="submit" class="btn btn-danger " style="margin-left: 480px;">Delete Category</button>
      </form>
      
       
-      <form action="/adminLogin/updateCategory/<%= singleCategory._id %> " method="post" enctype="multipart/form-data" >
+      <form action="/admin/updateCategory/<%= singleCategory._id %> " method="post" enctype="multipart/form-data" >
        
         
         <div class="mb-3">
@@ -120,7 +120,7 @@
           </div>
           <!-- <div class="row"> -->
             <!-- <div class="col-md-2 mt-3"> -->
-              <!-- <form action="/adminLogin/updateCategory" method="post" enctype="multipart/form-data">  -->
+              <!-- <form action="/admin/updateCategory" method="post" enctype="multipart/form-data">  -->
                 <button type="submit" class="btn btn-primary">Update</button>
                 <!-- </form> -->
               <!-- </div> -->
