--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -17,7 +17,7 @@
 			
 			
 			<div class="form-container  sign-in-container">
-				<form action="/adminLogin/admin" method="post" enctype="multipart/form-data">
+				<form action="/admin/admin" method="post" enctype="multipart/form-data">
 					<div class="header">Admin Login</div>
 					<div class="social__media__container">
 						<a href="https://codepen.io/Rittenhouse" target="_blank"  class="social codepen">
