--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -148,7 +148,7 @@
           <ul class="menu-inner py-1">
             <!-- Dashboard -->
             <li class="menu-item ">
-              <a href="/adminLogin/adminHome" class="menu-link">
+              <a href="/admin/adminHome" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
                 <div data-i18n="Analytics">Dashboard</div>
               </a>
@@ -163,17 +163,17 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/addProduct" class="menu-link">
+                  <a href="/admin/addProduct" class="menu-link">
                     <div data-i18n="Without menu">Add Products</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/adminLogin/showProducts" class="menu-link">
+                  <a href="/admin/showProducts" class="menu-link">
                     <div data-i18n="Without navbar">Show Products</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/adminLogin/category" class="menu-link">
+                  <a href="/admin/category" class="menu-link">
                     <div data-i18n="Container">Category</div>
                   </a>
                 </li>
@@ -191,7 +191,7 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/showUser" class="menu-link">
+                  <a href="/admin/showUser" class="menu-link">
                     <div data-i18n="Without menu">Show Users</div>
                   </a>
                 </li>
@@ -207,7 +207,7 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/coupon" class="menu-link">
+                  <a href="/admin/coupon" class="menu-link">
                     <div data-i18n="Without menu">Add Coupon</div>
                   </a>
                 </li>
@@ -223,12 +223,12 @@
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/banner" class="menu-link">
+                  <a href="/admin/banner" class="menu-link">
                     <div data-i18n="Without menu">Add Banner</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="/adminLogin/showBanner" class="menu-link">
+                  <a href="/admin/showBanner" class="menu-link">
                     <div data-i18n="Without menu">Show Banner</div>
                   </a>
                 </li>
@@ -246,7 +246,7 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="/adminLogin/orders" class="menu-link">
+                  <a href="/admin/orders" class="menu-link">
                     <div data-i18n="Account">Orders</div>
                   </a>
                 </li>
@@ -359,7 +359,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="/adminLogin">
+                      <a class="dropdown-item" href="/admin">
                         <i class="bx bx-power-off me-2"></i>
                         <span class="align-middle">Log Out</span>
                       </a>
@@ -496,7 +496,7 @@
                                 <span  class="text-center "><%= x.paymentStatus %></span>
                             </div>
                             <div class="d-flex justify-content-center" style="width: 20%;">
-                              <form action="/adminLogin/invoice/<%= order._id %>" method="post" enctype="multipart/form-data">
+                              <form action="/admin/invoice/<%= order._id %>" method="post" enctype="multipart/form-data">
                                 <% if(x.orderStatus == "Cancelled") { %>
                                   <h6>No bill</h6>
                                   <% } else { %> 
@@ -529,16 +529,16 @@
               <section class="d-flex justify-content-center mt-2">
                   <% if(hasPreviousPage){ %>
                     <a style="text-decoration: none;padding: .5rem; margin:0 1rem; color:rgb(223, 54, 54)" class="text-center"
-                      href="/adminLogin/orders?page=<%= PreviousPage %>"><i class="fa-solid fa-chevron-left"
+                      href="/admin/orders?page=<%= PreviousPage %>"><i class="fa-solid fa-chevron-left"
                         aria-hidden="true"></i></a>
                     <% } %>
                       <a style="text-decoration: none;padding: .5rem; margin:0 1rem; color:black; border: 1px solid black;"
-                        href="/adminLogin/orders?page=<%= page %>">
+                        href="/admin/orders?page=<%= page %>">
                         <%= page %>
                       </a>
                       <% if(hasNextPage) { %>
                         <a style="text-decoration: none;padding: .5rem; margin:0 1rem; color:black;"
-                          href="/adminLogin/orders?page=<%=  page+1 %>"><i class="fa-solid fa-chevron-right"
+                          href="/admin/orders?page=<%=  page+1 %>"><i class="fa-solid fa-chevron-right"
                             aria-hidden="true"></i></a>
                         <% } %>
                   </section>
@@ -558,11 +558,11 @@
     
     <script>
         function changeStatus(status, orderId, productId){
-            // axios.post('/adminLogin/changeStatus' , {status, orderId, productId}).then(()=>{
+            // axios.post('/admin/changeStatus' , {status, orderId, productId}).then(()=>{
             //     window.location.reload()
             // })
             $.ajax({
-                url:"/adminLogin/changeStatus",
+                url:"/admin/changeStatus",
                 data:{
                     status,
                     orderId,
@@ -580,7 +580,7 @@
         function invoice(orderId, productId){
             
             $.ajax({
-                url:"/adminLogin/invoice",
+                url:"/admin/invoice",
                 data:{
                     
                     orderId,
@@ -589,7 +589,7 @@
                 method:"post",
                 success:(response)=>{
                     if(response.success){
-                      location.href = "/adminLogin/invoicePage"
+                      location.href = "/admin/invoicePage"
                   }
                 }
             })
