--- a/views/admin/showBanner.ejs
+++ b/views/admin/showBanner.ejs
@@ -8,7 +8,7 @@
 
   <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4">
-      <span class="text-muted fw-light">Users/</span> Show Users
+      <span class="text-muted fw-light">Users/</span> Show Banners
     </h4>
 
     <!-- Basic Layout -->
@@ -38,10 +38,10 @@
                 <img src="/<%= x.image %>" style="height:60px;width: 60px;">
               </td>
               <td>
-                <form action="/adminLogin/editBanner/<%= x._id %>" method="post" enctype="multipart/form-data">
+                <form action="/admin/editBanner/<%= x._id %>" method="post" enctype="multipart/form-data">
                     <button type="submit" class="btn btn-secondary " style="width: 100px; height: 35px; margin-top: 2px;" >Edit</button>
                   </form>
-                  <form action="/adminLogin/deleteBanner/<%= x._id %>" method="post" enctype="multipart/form-data">
+                  <form action="/admin/deleteBanner/<%= x._id %>" method="post" enctype="multipart/form-data">
                     <button type="submit" class="btn btn-danger " style="width: 100px; height: 35px; margin-top: 2px;" >Delete</button>
                   </form>
               </td>
@@ -55,3 +55,5 @@
     <!-- / Content -->
   </div>
 </div>
+
+<%- include('../adminFooter.ejs') -%>
