--- a/views/admin/showProducts.ejs
+++ b/views/admin/showProducts.ejs
@@ -39,15 +39,15 @@
                         <td>
                           
 
-                            <form action="/adminLogin/editProductForm/<%= x._id %>" method="post" enctype="multipart/form-data">
+                            <form action="/admin/editProductForm/<%= x._id %>" method="post" enctype="multipart/form-data">
                               <button type="submit" class="btn btn-secondary " style="width: 100px; height: 35px; margin-top: 2px;" >Edit</button>
                             </form>
                             <% if( x.status == "listed") { %>
-                              <form action="/adminLogin/unListProduct/<%= x._id %>" method="post" enctype="multipart/form-data">
+                              <form action="/admin/unListProduct/<%= x._id %>" method="post" enctype="multipart/form-data">
                               <button type="submit" class="btn btn-danger  " style="width: 100px; height: 35px;">unlist</button>
                             </form>
                             <% } else { %>
-                            <form action="/adminLogin/listProduct/<%= x._id %>" method="post" enctype="multipart/form-data">
+                            <form action="/admin/listProduct/<%= x._id %>" method="post" enctype="multipart/form-data">
                               <button type="submit" class="btn btn-danger" style="width: 100px; height: 35px;">list</button>
                             </form>
 
@@ -61,16 +61,16 @@
                      <section class="d-flex justify-content-center mt-2">
                       <% if(hasPreviousPage){ %>
                         <a style="text-decoration: none;padding: .5rem; margin:0 1rem; color:rgb(223, 54, 54)" class="text-center"
-                          href="/adminLogin/showProducts?page=<%= PreviousPage %>"><i class="fa-solid fa-chevron-left"
+                          href="/admin/showProducts?page=<%= PreviousPage %>"><i class="fa-solid fa-chevron-left"
                             aria-hidden="true"></i></a>
                         <% } %>
                           <a style="text-decoration: none;padding: .5rem; margin:0 1rem; color:black; border: 1px solid black;"
-                            href="/adminLogin/showProducts?page=<%= page %>">
+                            href="/admin/showProducts?page=<%= page %>">
                             <%= page %>
                           </a>
                           <% if(hasNextPage) { %>
                             <a style="text-decoration: none;padding: .5rem; margin:0 1rem; color:black;"
-                              href="/adminLogin/showProducts?page=<%=  page+1 %>"><i class="fa-solid fa-chevron-right"
+                              href="/admin/showProducts?page=<%=  page+1 %>"><i class="fa-solid fa-chevron-right"
                                 aria-hidden="true"></i></a>
                             <% } %>
                       </section>
