--- a/views/admin/showUser.ejs
+++ b/views/admin/showUser.ejs
@@ -63,7 +63,7 @@
                 <!-- <div class="dropdown-menu"> -->
                 <% if( x.status == "blocked") { %>
                 <form
-                  action="/adminLogin/unblockUser/<%= x._id %>"
+                  action="/admin/unblockUser/<%= x._id %>"
                   method="post"
                   enctype="multipart/form-data"
                 >
@@ -77,7 +77,7 @@
                 </form>
                 <% } else { %>
                 <form
-                  action="/adminLogin/blockUser/<%= x._id %>"
+                  action="/admin/blockUser/<%= x._id %>"
                   method="post"
                   enctype="multipart/form-data"
                 >
@@ -104,3 +104,6 @@
     <!-- / Content -->
   </div>
 </div>
+
+<%- include('../adminFooter.ejs') -%>
+
