--- a/views/user/addAddress.ejs
+++ b/views/user/addAddress.ejs
@@ -17,7 +17,7 @@
             
           </div> -->
           <!-- <div class="text-center">
-            <a href="/login/profile">
+            <a href="/profile">
             <button type="submit" class="btn btn-white btn-rounded back-button">
               Go back
             </button>
@@ -31,7 +31,7 @@
                 <h4 style="color: #495057">ADD ADDRESS</h4>
               </div>
 
-              <form action="/login/newAddress" class="mb-0" method="post">
+              <form action="/newAddress" class="mb-0" method="post">
                 <div class="row mb-4">
                   <div class="col">
                     <div class="form-outline">
