--- a/views/user/productdetail.ejs
+++ b/views/user/productdetail.ejs
@@ -79,7 +79,7 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="/login/userHome">Insoles</a>
+        <a class="navbar-brand" href="/">Insoles</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -95,7 +95,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/login/userHome" class="nav-link">Home</a>
+              <a href="/" class="nav-link">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -134,16 +134,16 @@
                 >Account</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="/login/profile">PROFILE</a>
-                <a class="dropdown-item" href="/login/logout">LOGOUT</a>
+                <a class="dropdown-item" href="/profile">PROFILE</a>
+                <a class="dropdown-item" href="/logout">LOGOUT</a>
               </div>
             </li>
 
             <li class="nav-item">
-              <a href="/login/wishlist" class="nav-link">Wishlist</a>
+              <a href="/wishlist" class="nav-link">Wishlist</a>
             </li>
             <li class="nav-item cta cta-colored">
-              <a href="/login/cart" class="nav-link"
+              <a href="/cart" class="nav-link"
                 ><span class="icon-shopping_cart"></span>[0]</a
               >
             </li>
@@ -170,7 +170,7 @@
 
     <section class="ftco-section">
     	<div class="container">
-			<form action="/login/addToCart/<%= singleProduct._id %>" method="post">
+			<form action="/addToCart/<%= singleProduct._id %>" method="post">
     		<div class="row">
     			<div class="col-lg-6 mb-5 ftco-animate">
     				<a href="/<%= singleProduct.image %>" class="image-popup prod-img-bg"><img src="/<%= singleProduct.image %>" class="img-fluid" alt="Colorlib Template"></a>
