--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -41,14 +41,14 @@
                     class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
                   >
                     <i class="bi bi-cart-check-fill"></i
-                    ><a href="/login/orders"><h6 class="mb-0 text-success">Orders</h6></a>
+                    ><a href="/orders"><h6 class="mb-0 text-success">Orders</h6></a>
                     <span class="text-secondary">@Insoles</span>
                   </li>
                   <li
                     class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
                   >
                     <i class="bi bi-folder-plus"></i>
-                    <a href="/login/manageAddress"><h6 class="text-success mb-0">Saved address</h6></a>
+                    <a href="/manageAddress"><h6 class="text-success mb-0">Saved address</h6></a>
                     <span class="text-secondary">Insoles</span>
                   </li>
                 </ul>
@@ -106,7 +106,7 @@
                       <a
                         class="btn btn-success"
                         target="__blank"
-                        href="/login/addAddressPage"
+                        href="/addAddressPage"
                         >Add address</a
                       >
                     </div>
