--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -85,7 +85,7 @@
     			<div class="col-sm-12 col-md-6 col-lg-3 ftco-animate d-flex">
     				<div class="product d-flex flex-column">
 						
-    					<a href="/login/productdetail/<%= x._id %>" class="img-prod"><img class="img-fluid" style="width: 100%; height: 350px;" src="/<%= x.image %>" alt="Colorlib Template" >
+    					<a href="/productdetail/<%= x._id %>" class="img-prod"><img class="img-fluid" style="width: 100%; height: 350px;" src="/<%= x.image %>" alt="Colorlib Template" >
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3">	
@@ -108,7 +108,7 @@
 	    						<p class="price"><span>Rs.<%= x.price %></span></p>
 	    					</div>
 	    					<p class="bottom-area d-flex px-3">
-    							<a  href="/login/moveToCart/<%= x._id %>" class="add-to-cart text-center py-2 mr-1"><span> <i class="ion-ios-cart ml-1"></i></span></a>	
+    							<a  href="/moveToCart/<%= x._id %>" class="add-to-cart text-center py-2 mr-1"><span> <i class="ion-ios-cart ml-1"></i></span></a>	
     							<a onclick="itemAdded('<%= x._id %>')"  class="buy-now text-center py-2"><span><i class="ion-ios-heart ml-1"></i></span></a>
     						</p>
     					</div>
@@ -397,7 +397,7 @@
 		function itemAdded(id){
 
 			$.ajax({
-          url: "/login/addToWishlist",
+          url: "/addToWishlist",
           data: {
             id
           },
